objects/vlocity_cmt__DocuSignEnvelopeObjectSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__DocParentIdField__c</fullName>
        <description>Parent Id for document attachment.</description>
        <label>Document Parent Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignAccountBrand__c</fullName>
        <description>DocuSign Account Brand Setting</description>
        <label>DocuSignAccountBrand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignExpireAfter__c</fullName>
        <description>DocuSign Expire After Setting</description>
        <label>DocuSignExpireAfter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignExpireEnabled__c</fullName>
        <description>DocuSign Expire Enabled Setting</description>
        <label>DocuSignExpireEnabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignExpireWarn__c</fullName>
        <description>DocuSign Expire Warn Setting</description>
        <label>DocuSignExpireWarn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignReminderDelay__c</fullName>
        <description>DocuSign Reminder Delay Setting</description>
        <label>DocuSignReminderDelay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignReminderEnabled__c</fullName>
        <description>DocuSign Reminder Enabled Setting</description>
        <label>DocuSignReminderEnabled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignReminderFrequency__c</fullName>
        <description>DocuSign Reminder Frequency Setting</description>
        <label>DocuSignReminderFrequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DocuSignUseAccountDefaultNotification__c</fullName>
        <description>DocuSign Use Account Default Notification Setting</description>
        <label>DocuSignUseAccountDefaultNotification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeObjectName__c</fullName>
        <label>Envelope Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentObjectIdField__c</fullName>
        <description>Parent Object Id field in Envelope Object.</description>
        <label>Parent Object Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecipientObjectName__c</fullName>
        <label>Recipient Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Object Setting</label>
</CustomObject>